[package]
description = 'Pallet for aggregation of available liquidity sources for other pallets and external api.'
version = '0.1.0'
name = 'dex-api'
edition = '2018'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
assets = { path = "../assets", default-features = false }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
common = { path = "../../common", default-features = false }

currencies = { version = "0.4.1-dev", package = "orml-currencies", default-features = false, git = "https://github.com/EmelianPiker/open-runtime-module-library.git", branch = "simple" }

dex-manager = { path = "../dex-manager", default-features = false }

frame-support = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }

pallet-balances = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }

sp-arithmetic = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
trading-pair = { path = "../trading-pair", default-features = false }

tokens = { version = "0.4.1-dev", package = "orml-tokens", default-features = false, git = "https://github.com/EmelianPiker/open-runtime-module-library.git", branch = "simple" }
traits = { version = "0.4.1-dev", package = "orml-traits", default-features = false, git = "https://github.com/EmelianPiker/open-runtime-module-library.git", branch = "simple" }

[dev-dependencies]
hex-literal = "0.3.1"
sp-core = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk" }
#pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }

[dev-dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
default-features = false

[dev-dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
version = '0.1.0'

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'currencies/std',
    'tokens/std',
    'traits/std',
]
