[package]
edition = '2018'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
name = 'trading-pair'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "3", default-features = false, optional = true, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
frame-support = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
hex-literal = { version = "0.3.1", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
sp-core = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }

currencies = { version = "0.4.1-dev", package = "orml-currencies", default-features = false, git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "polkadot-0.9.8" }
tokens = { version = "0.4.1-dev", package = "orml-tokens", default-features = false, git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "polkadot-0.9.8" }
traits = { version = "0.4.1-dev", package = "orml-traits", default-features = false, git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "polkadot-0.9.8" }

assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }

[dev-dependencies]
pallet-balances = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
permissions = { path = "../permissions" }

[dev-dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dev-dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
version = '0.1.0'

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'tokens/std',
    'traits/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "hex-literal",
]
