[package]
name = "xcm-app"
authors = ["Anonymous"]
description = "FRAME pallet that converts AssetId to Multilocation"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/polkadot-sdk.git-sdk.git/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.14", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot-sdk.git.git", default-features = false, branch = "release-polkadot-v1.1.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk.git.git", default-features = false, branch = "release-polkadot-v1.1.0" } # needed to compile pallet as standalone crate 
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git.git", default-features = false, branch = "release-polkadot-v1.1.0" }  # needed to compile pallet as standalone crate 

# Local
parachain-common = { path = "../../parachain-common", default-features = false }

# Sora
bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }

# ORML
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "release-polkadot-v1.1.0" }

[dev-dependencies]
serde = { version = "1.0.132" }

# Substrate
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git-sdk.git", default-features = false, branch = "release-polkadot-v1.1.0" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
std = [
	"bridge-types/std",
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
